# CrossedFingers

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  USAGE.md  crossedfingers.nix  flake.nix  renovate.json  shell.nix  specs.md
.github/: pull_request_template.md
.github/workflows/: codeql.yml  documentation.yml  package.yml  tests.yml
cmake/: CrossedFingers.cmake  CrossedFingersAddTests.cmake  packaging.cmake
cmake/package/: crossedfingers-config.cmake.in
include/crossedfingers/: GlobalState.h  OutputBuffer.h  TestCase.h  TestRun.h  TestStatus.h  TestSuite.h  assert.h  test.h  utilities.h  utils.h
include/crossedfingers/assert/: Assertion.h  AssertionException.h  assert.h
include/crossedfingers/commands/: ListCommand.h  RunCommand.h
include/crossedfingers/display/: DefaultDisplay.h  Display.h  OutputWrapper.h
include/crossedfingers/internals/: GlobalState.h  TestCase.h  TestRun.h  TestStatus.h  TestSuite.h  utils.hpp
include/crossedfingers/internals/assert/: Assertion.h  AssertionException.h  Diff.h  Serializer.h
include/crossedfingers/internals/commands/: ListCommand.h  RunCommand.h
include/crossedfingers/internals/display/: DefaultDisplay.h  Display.h  DotDisplay.h  OutputWrapper.h
src/: main.cpp
src/crossedfingers/: GlobalState.cpp  OutputBuffer.cpp  TestCase.cpp  TestRun.cpp  TestStatus.cpp  TestSuite.cpp  utils.hpp
src/crossedfingers/assert/: Assertion.cpp
src/crossedfingers/commands/: ListCommand.cpp  RunCommand.cpp
src/crossedfingers/display/: DefaultDisplay.cpp  DotDisplay.cpp  OutputWrapper.cpp
tests/: CMakeLists.txt
tests/e2e/: test_run.test.cpp  test_tools.hpp
tests/run/: test_run.test.cpp
tests/unit/: TestCase.test.cpp  TestRun.test.cpp  TestRunTest.cpp  TestSuite.test.cpp  test_run.test.cpp  test_tools.hpp  utils.test.cpp  utils.test.ts.cpp
tests/unit/assert/: Serializer.test.cpp  assert.test.cpp
tests/unit/commands/: ListCommand.test.cpp  RunCommand.test.cpp  RunCommandTest.cpp
tests/unit/internals/: utils.test.cpp
tools/doxygen/: footer.html  header.html
tools/nix/: crossedfingers.nix  default.nix  yeschief.nix
